--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,7 @@ dependencies = [
 [build-system]
 requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["validates*"]
